# quicfire-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  paper.bib  paper.md  pyproject.toml  setup.py
.github/workflows/: build-docs.yml  pre-commit.yaml  release.yml  run-tests.yml
docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
examples/: rechunking.ipynb  rioxarray.ipynb
examples/data/: blue_mtn_100m.geojson
explanation/: index.html
how-to-guides/: index.html
notebooks/: demo.ipynb
quicfire-tools/: inputs.py
quicfire-tools/input-templates/: QFire_Advanced_User_Inputs.inp  QFire_Bldg_Advanced_User_Inputs.inp  QFire_Plume_Advanced_User_Inputs.inp  QUIC_fire.inp  QU_simparams.inp  (+4 more)
quicfire_tools/: __init__.py  calculate_metrics.py  examples.py  ignitions.py  inputs.py  jay_netcdf_from_qf.py  outputs.py  parameters.py  temp.py  test_for_niko.py  topography.py  utils.py  visualization.py  winds.py
reference/: index.html
requirements/: docs.txt  readme.md  requirements.txt  requirements.yml  test_requirements.txt  tests-310.yml  tests-311.yml  tests-38.yml  tests-39.yml
search/: search_index.json
tests/: __init__.py  build_run_for_test_output_module_zarr.py  build_simulations_for_outputs_tests.py  conftest.py  simulation_inputs_test.py  test_LoadSurfEng_module.ipynb  test_LoadSurfEng_module.py  test_input_module.py  test_inputs.py  test_output_module.py  test_output_module_zarr.py  test_outputs.py  test_visualization.py
tutorials/: index.html
(+153 files in other folders)
